content/docs/v9.6.1/data-buckets/overview.md
---
title: Overview
meta:
  title: Data buckets overview
  description: Learn what are Mockoon's data buckets, how they work, what type of content is supported and how to create one
order: 600
---

# Data buckets overview

---

## What are data buckets?

In Mockoon, a data bucket is a **key value store** where you can create reusable content or data for your routes.

The data buckets are defined at the **environment level** and are **generated when the server starts**. It means that their state **persists between each call** ([see below](#data-buckets-generation)).

## Create a data bucket

To create a new data bucket, open the **Data** options by clicking on the tab at the top of the window:

![Open data bucket view{795x160}](docs-img:open-data-view.png)

Add a new data bucket by clicking on the "plus" button:

![Add a data bucket{1484x576}](docs-img:add-data-bucket.png)

You can change the data bucket title and content on the right part of the screen.
Mockoon will automatically attribute a new **unique ID** to your data bucket. You can use this ID to reference the data using the [`data` helpers](docs:data-buckets/using-data-buckets#using-data-helpers). To retrieve a bucket's unique ID, look in the footer under the data bucket content or right-click on a bucket name in the list and click on "Copy ID to clipboard".

## Content of a data bucket

Data buckets can contain any text content. They also support all of Mockoon's [templating helpers](docs:templating/overview) including the [`data` and `dataRaw` helpers](docs:data-buckets/using-data-buckets#using-data-helpers).

Mockoon will always try to parse the data bucket's JSON content to allow you to use the various [templating helpers](docs:templating/overview) to manipulate the data (e.g. `{{ data ... }}`, `{{ setData ... }}`).

A data bucket can also [**contain a JSON schema**](docs:data-buckets/using-data-buckets#storing-json-schemas) to be use in combination with a [response rule](docs:route-responses/dynamic-rules#5-value) to validate some data (request's body, query parameters, etc.).

## Combining data buckets

You can easily combine your data bucket contents by referencing other data buckets using the `dataRaw` helper:

```json
//data bucket content
{
  "data": {
    "id": "{{ dataRaw 'other-data-bucket-content' }}"
  }
}
```

> ⚠️ Data buckets are generated in the order they are defined in the environment. As a consequence, you cannot reference a data bucket that is defined **after** the current one. You can easily reorder your data buckets by dragging and dropping them in the list.

## Data buckets generation

Data buckets are generated when the **server starts** in the order they are defined in the environment. Their state persist during all mock API calls and are shared between all routes.

If a data bucket contains [request helpers](docs:templating/mockoon-request-helpers), Mockoon will generate the bucket content only **after the first call** made to a route using this data bucket (by referencing it directly or using a data helper). It allows you to create bucket "configuration" routes that you can call programmatically with the content you want to reuse in your bucket using the request helpers (`body`, `queryParams`, etc.).

> 💡 Data buckets can be added, modified or deleted when the server is running. They will be (re)generated immediately and their content will be available for the next incoming request. However, if a data bucket contained references to other buckets, you need to restart the server for the changes to take effect.

## Resetting data buckets

To regenerate a data bucket's content, you can restart the mock server or you can also use the [admin API state purge endpoint](docs:admin-api/server-state) or specific [data buckets endpoint](docs:admin-api/data-buckets).
